--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "project",
   "version": "0.1.0",
   "private": true,
@@ -10,10 +11,12 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "form-data": "^4.0.0",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
     "react-paginate": "^8.1.3",
@@ -21,7 +24,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
